5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_996.log
== SUBMITION (2019-03-11 15:33:20) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.130984
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:22) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.108962
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:23) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.137598
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:23) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.14381
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:24) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.185393
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:24) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.151958
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:25) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.126979
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:25) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.101075
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:25) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.171872
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:25) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.114844
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:36) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.168707
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.269818
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.132433
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.11574
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.167298
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.128429
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:37) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.156939
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:38) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.0836761
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/996/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:38) 
-- CODE:
print("  ***** ")
print("(* o o *) ")
print(" *  ^  * " )
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.160952
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *) 
 *  ^  * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:56) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *" )
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.137354
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:56) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *" )
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.205408
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:57) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *" )
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.14937
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:57) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *" )
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.131245
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:33:57) 
-- CODE:
print("  *****")
print("(* o o *)")
print("*  ^  *" )
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.101888
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:11) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.13136
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:11) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.180236
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.113555
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.100842
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.0984211
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.092972
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.126665
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:12) 
-- CODE:
print("   *****")
print(" (* o o *)")
print("  *  ^  *" )
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.0953541
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 (* o o *)
  *  ^  *
  *  ^  *
  * --- *
   *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:22) 
-- CODE:
print("   *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.110996
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:24) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:41) 
-- CODE:
print(" *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.170324
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:43) 
-- CODE:
print(" *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.196047
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:43) 
-- CODE:
print(" *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.098362
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/996/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:34:43) 
-- CODE:
print(" *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- OUTPUT:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:34:56) 
-- CODE:
print(" *****")
print("(* o o *)")
print(" *  ^  *" )
print(" *  ^  *")
print(" * --- *")
print("  *****")
-- EXECUTION TIME:
0.141948
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:26) 
-- CODE:
print" *****"[]
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.120674
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print" *****"[]
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:29) 
-- CODE:
print" *****"
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.11995
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print" *****"
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:29) 
-- CODE:
print" *****"
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.199877
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print" *****"
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:30) 
-- CODE:
print" *****"
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.13165
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print" *****"
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:30) 
-- CODE:
print" *****"
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.180531
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print" *****"
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:36:30) 
-- CODE:
print" *****"
print"(* o o *)"
print" *  ^  *" 
print" *  ^  *"
print" * --- *"
print"  *****"
-- EXECUTION TIME:
0.0920451
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/996/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:04) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.116235
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:05) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.187709
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:05) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.108681
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:05) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.14758
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:05) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.102419
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:06) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.121866
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:06) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.157247
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:06) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.108747
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.0999601
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.13965
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.106056
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.113776
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.108698
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:07) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.104078
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:08) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.154705
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:08) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.0943999
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:08) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.140054
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:09) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.150595
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:09) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.107887
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:09) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.0976779
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:09) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.11498
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:38:10) 
-- CODE:
print *****
print(* o o *)
print*  ^  * 
print*  ^  *
print* --- *
print  *****
-- EXECUTION TIME:
0.0934
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print *****
             ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:08) 
-- CODE:
print "*****"
print"* o o *"
print"*  ^  *"
print"*  ^  *"
prin"* --- *"
print  "*****"

-- EXECUTION TIME:
0.134517
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print "*****"
                ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:09) 
-- CODE:
print "*****"
print"* o o *"
print"*  ^  *"
print"*  ^  *"
prin"* --- *"
print  "*****"

-- EXECUTION TIME:
0.16114
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print "*****"
                ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:09) 
-- CODE:
print "*****"
print"* o o *"
print"*  ^  *"
print"*  ^  *"
prin"* --- *"
print  "*****"

-- EXECUTION TIME:
0.119236
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print "*****"
                ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:41) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*  ^  *")
print("* --- *")
print  ("*****")

-- EXECUTION TIME:
0.15721
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:42) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*  ^  *")
print("* --- *")
print  ("*****")

-- EXECUTION TIME:
0.144013
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:42) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*  ^  *")
print("* --- *")
print  ("*****")

-- EXECUTION TIME:
0.120782
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:40:42) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("*  ^  *")
print("* --- *")
print  ("*****")

-- EXECUTION TIME:
0.0932078
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:41) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")

-- EXECUTION TIME:
0.129745
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:41) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")

-- EXECUTION TIME:
0.109574
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:41) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")

-- EXECUTION TIME:
0.11742
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:42) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")

-- EXECUTION TIME:
0.106859
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:42) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print ("*****")

-- EXECUTION TIME:
0.132177
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:07) 
-- CODE:
print("  *****")
print(" * o o *")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.162365
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:07) 
-- CODE:
print("  *****")
print(" * o o *")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.157486
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:08) 
-- CODE:
print("  *****")
print(" * o o *")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.117101
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:08) 
-- CODE:
print("  *****")
print(" * o o *")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.0954721
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
 * o o *
 *  ^  *
 * --- *
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:38) 
-- CODE:
print("  *****")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  *****")

-- EXECUTION TIME:
0.207163
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
